# MetaTracker

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  Dockerfile  Makefile  README.md  pyproject.toml  test.py  tox.ini
.github/workflows/: main.yml
cdftracker/: __init__.py  config.yaml
cdftracker/config/: __init__.py  config.py
cdftracker/database/: __init__.py
cdftracker/database/tables/: __init__.py  base_table.py  db.db  file_level_table.py  file_type_table.py  instrument_configuration_table.py  instrument_table.py  science_file_table.py  science_product_table.py
cdftracker/tracker/: track.py  tracker.py
metatracker/: __init__.py
metatracker/config/: __init__.py  config.py
metatracker/database/: __init__.py
metatracker/database/tables/: __init__.py  base_table.py  file_level_table.py  file_type_table.py  instrument_configuration_table.py  instrument_table.py  science_file_table.py  science_product_table.py  status_table.py
metatracker/tracker/: tracker.py
tests/: test_cdftracker.py  test_foo.py
tests/test_database/: test_database.py
tests/test_database/test_tables/: test_tables.py
tests/test_tracker/: test_tracker.py
